--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "gulp-pleeease": "^1.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^1.2.2"
   },
   "dependencies": {
     "laravel-elixir": "^2.0.0",
