--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "material-design-lite": "~1.0.2"
+    "material-design-lite": "~1.0.2",
+    "material-design-icons": "~2.0.0"
   }
 }
