--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@ APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_PREFIX=jksd_
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
