--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8",
+    "browser-sync": "^2.8.2",
+    "gulp": "^3.9.0",
     "gulp-pleeease": "^1.2.0",
     "gulp-sass": "^2.0.4"
   },
