--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "material-design-lite": "~1.0.2"
+    "material-design-lite": "~1.0.2",
+    "modernizr": "~2.8.3",
+    "fastclick": "~1.0.6"
   }
 }
