--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "devDependencies": {
     "browser-sync": "^2.8.2",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-pleeease": "^1.2.0",
-    "gulp-sass": "^2.0.4"
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.2.0"
   },
   "dependencies": {
     "laravel-elixir": "^2.0.0",
